# synnamon

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: publish.yml  tests.yml
inflex/: __init__.py
synnamon/: __init__.py  cli.py  fuzzy.py  get_syns.py  index.py
tests/: test_api_enhancements.py  test_cli.py  test_fuzzy_and_normalize.py  test_get_syns.py  test_index_search.py  test_init_import.py
