[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synnamon"
description = "Pure Python package for getting synonyms for words."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Odos Matthews", email = "odosmatthews@gmail.com" }
]
dynamic = ["version"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "inflex"
]

[project.urls]
Homepage = "https://github.com/eddiethedean/synnamon"
Repository = "https://github.com/eddiethedean/synnamon"
Issues = "https://github.com/eddiethedean/synnamon/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["synnamon*"]

[tool.setuptools.package-data]
synnamon = ["data/*.db"]

[tool.setuptools.dynamic]
version = { attr = "synnamon.__init__.__version__" }

[project.scripts]
synnnamon = "synnnamon.cli:main"

[project.optional-dependencies]
fuzzy = ["rapidfuzz>=3"]

[tool.pytest.ini_options]
addopts = "--cov=synnamon"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "synnamon"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true